--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,6 +12,7 @@
     <string name="action_no">No</string>
     <string name="action_edit">Edit</string>
     <string name="action_refresh">Refresh</string>
+    <string name="action_delete">Delete</string>
 
     <string name="dialog_confirm_cancel_msg">Do you want to discard your changes?</string>
 
@@ -42,6 +43,7 @@
 
     <!-- db errors -->
     <string name="db_error_insert">Error adding %s</string>
+    <string name="db_error_update">Error saving %s</string>
     <string name="db_error_delete_meat_type">Cannot delete %s while products still exist</string>
     <string name="db_error_delete_product">Cannot delete %s while stock, contracts or orders still exist</string>
     <string name="db_error_delete_location">Cannot delete %s while stock, contracts or orders still exist</string>
@@ -108,7 +110,7 @@
     <string name="locations_type_storage">Storage</string>
     <string name="locations_type_destination">Destination</string>
     <string name="locations_type_generic">Location</string>
-    <string name="locations_new">Add new locationId</string>
+    <string name="locations_new">Add new location</string>
     <string name="locations_input_name">Name</string>
     <string name="locations_input_type">Type</string>
     <string name="locations_input_email">Email</string>
@@ -118,10 +120,15 @@
     <string name="locations_input_city">City</string>
     <string name="locations_input_postcode">Postcode</string>
     <string name="locations_input_country">Country</string>
-    <string name="locations_add_new_title">Add new %s</string>
+
     <string name="locations_empty">No locations to show</string>
 
+    <string name="locations_add_new_title">Add new %s</string>
+    <string name="location_edit_title">Edit %s</string>
     <string name="location_details_title">Location details</string>
+
+    <string name="location_delete_success">Location deleted successfully</string>
+    <string name="location_delete_error">Cannot delete location</string>
 
     <!-- Orders page -->
     <string name="orders_title">Orders</string>
