--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -160,9 +160,11 @@
     <string name="orders_input_quantity_boxes">Number of boxes</string>
     <string name="orders_add_product">Add another product</string>
     <string name="orders_input_destination">Destination</string>
-    <string name="orders_input_date">Date:</string>
+    <string name="orders_input_date">Date</string>
+    <string name="orders_input_completed">Completed</string>
 
     <string name="order_details_title">Order details</string>
+    <string name="order_edit_title">Edit order</string>
 
     <!-- Contracts page -->
     <string name="contracts_title">Contracts</string>
@@ -238,4 +240,7 @@
     <string name="redo_add_stock_success">Redo add \"%s\"</string>
     <string name="undo_delete_stock_success">Undo delete \"%s\"</string>
     <string name="redo_delete_stock_success">Redo delete \"%s\"</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
