--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -221,7 +221,9 @@
         <item quantity="other">%d days ago</item>
     </plurals>
     <string name="exchange_history_today">Today</string>
-    <string name="exchange_choose_currencies_no_fav">No Currencies Starred</string>
+    <string name="exchange_choose_currencies_no_fav">No currencies starred. Please select at least two.</string>
+    <string name="exchange_choose_currencies_not_enough">Not enough currencies selected.
+        Please select at least two.</string>
 
     <string name="exchange_loading">Loading…</string>
     <string name="exchange_no_connection">No internet connection available.
