--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,6 +68,7 @@
     <string name="perm_error_storage_denied">Please allow external storage permissions for this feature.</string>
 
     <!-- Search -->
+    <string name="search_title">Search</string>
     <string name="search_add_new">Add new %s…</string>
     <string name="search_no_matches">No matching results found</string>
 
