--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -184,6 +184,7 @@
     <string name="contracts_input_quantity_lbs">Quantity (lbs)</string>
     <string name="contracts_input_quantity_boxes">Number of boxes</string>
     <string name="contracts_add_product">Add another product</string>
+
     <string name="contracts_reminder">Reminder</string>
     <string name="contracts_reminder_off">Reminder (off)</string>
     <string name="contracts_reminder_day_before_one">day before</string>
@@ -218,7 +219,6 @@
     <string name="contracts_divider_tomorrow">Tomorrow</string>
     <string name="contracts_divider_days_until">In %d days</string>
 
-
     <string name="contracts_next_repeat_today">Next repeat is today</string>
     <string name="contracts_next_repeat_tomorrow">Next repeat is tomorrow</string>
     <string name="contracts_next_repeat_on">Next repeat is in %d days</string>
@@ -227,7 +227,7 @@
     <string name="contract_edit_title">Edit contract</string>
     <string name="contract_details_title">Contract details</string>
 
-    <plurals name="contract_upcoming_days">
+    <plurals name="contract_alert_upcoming_days">
         <item quantity="one">Upcoming contract tomorrow</item>
         <item quantity="other">Upcoming contract in %d days</item>
     </plurals>
