location type spinner rather than edit text

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -135,10 +135,9 @@
     <string name="locations_type_supplier">Supplier</string>
     <string name="locations_type_storage">Storage</string>
     <string name="locations_type_destination">Destination</string>
-    <string name="locations_type_generic">Location</string>
     <string name="locations_new">Add new location</string>
     <string name="locations_input_name">Name</string>
-    <string name="locations_input_type">Type</string>
+    <string name="locations_input_type">Type:</string>
     <string name="locations_input_email">Email</string>
     <string name="locations_input_phone">Phone</string>
     <string name="locations_input_addr_line_1">Address line 1</string>
