wrap at 95 cols

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,7 +17,9 @@
     <string name="dialog_confirm_cancel_msg">Do you want to discard your changes?</string>
 
     <string name="dialog_confirm_delete_msg">Are you sure you want to delete \"%s\"?</string>
-    <string name="dialog_confirm_delete_msg_default">Are you sure you want to delete this item?</string>
+    <string name="dialog_confirm_delete_msg_default">
+        Are you sure you want to delete this item?
+    </string>
 
     <!-- Menus -->
     <string name="action_edit_locations">Edit locations</string>
@@ -54,9 +56,15 @@
     <string name="db_delete_contract_success">Deleted contract</string>
     <string name="db_delete_contract_error">Error deleting contract</string>
 
-    <string name="db_error_delete_meat_type">Cannot delete %s while products still exist</string>
-    <string name="db_error_delete_product">Cannot delete %s while stock, contracts or orders still exist</string>
-    <string name="db_error_delete_location">Cannot delete %s while stock, contracts or orders still exist</string>
+    <string name="db_error_delete_meat_type">
+        Cannot delete %s while products still exist
+    </string>
+    <string name="db_error_delete_product">
+        Cannot delete %s while stock, contracts or orders still exist
+    </string>
+    <string name="db_error_delete_location">
+        Cannot delete %s while stock, contracts or orders still exist
+    </string>
 
     <string name="db_backup_success">Database saved to\n%s</string>
     <string name="db_backup_error">Error exporting database</string>
@@ -65,7 +73,9 @@
 
 
     <!-- permissions -->
-    <string name="perm_error_storage_denied">Please allow external storage permissions for this feature.</string>
+    <string name="perm_error_storage_denied">
+        Please allow external storage permissions for this feature.
+    </string>
 
     <!-- Search -->
     <string name="search_title">Search</string>
@@ -77,10 +87,15 @@
     <string name="input_error_invalid">Invalid input</string>
     <string name="input_error_duplicate">Already added</string>
     <string name="input_error_invalid_email">Invalid email</string>
-    <string name="input_error_invalid_location_type">Invalid location type. Please select from the dropdown.</string>
-    <string name="input_error_stock_already_in_location">This product has already been added
-        with this supplier in this location.</string>
-    <string name="input_error_time_must_be_future">Please select a time at least 10 minutes from now</string>
+    <string name="input_error_invalid_location_type">
+        Invalid location type. Please select from the dropdown.
+    </string>
+    <string name="input_error_stock_already_in_location">
+        This product has already been added with this supplier in this location.
+    </string>
+    <string name="input_error_time_must_be_future">
+        Please select a time at least 10 minutes from now
+    </string>
     <string name="input_error_blank_date">Please select a date</string>
 
     <!-- Snackbars -->
@@ -244,14 +259,19 @@
         <item quantity="other">%d days ago</item>
     </plurals>
     <string name="exchange_history_today">Today</string>
-    <string name="exchange_choose_currencies_no_fav">No currencies starred. Please select at least two.</string>
+    <string name="exchange_choose_currencies_no_fav">
+        No currencies starred. Please select at least two.
+    </string>
     <string name="exchange_choose_currencies_not_enough">Not enough currencies selected.
-        Please select at least two.</string>
+        Please select at least two.
+    </string>
     <string name="exchange_choose_currencies_no_results">No matching currencies found.</string>
 
     <string name="exchange_loading">Loading…</string>
-    <string name="exchange_no_connection">No internet connection available.
-        \nPlease connect to WiFi or mobile data and try again.</string>
+    <string name="exchange_no_connection">
+        No internet connection available.
+        \nPlease connect to WiFi or mobile data and try again.
+    </string>
 
     <!-- 5 significant figures -->
     <string name="exchange_rate">%.5G</string>
