--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -190,17 +190,6 @@
     <string name="order_edit_title">Edit order</string>
     <string name="order_details_title">Order details</string>
 
-    <string name="order_current_stock">Current stock</string>
-    <plurals name="order_current_stock_kg">
-        <item quantity="one">%s: %s kg in one location</item>
-        <item quantity="other">%s: %s kg in %d locations</item>
-    </plurals>
-    <plurals name="order_current_stock_lbs">
-        <item quantity="one">%s: %d lbs in one location</item>
-        <item quantity="other">%s: %d lbs in %d locations</item>
-    </plurals>
-    <string name="order_current_stock_none">%s: no stock</string>
-
     <string name="order_alert_upcoming_tomorrow">Upcoming order tomorrow</string>
 
     <!-- Contracts page -->
@@ -262,6 +251,18 @@
         <item quantity="one">Upcoming contract tomorrow</item>
         <item quantity="other">Upcoming contract in %d days</item>
     </plurals>
+
+    <!-- Order and contract related stock -->
+    <string name="related_stock_title">Current stock</string>
+    <plurals name="related_stock_item_kg">
+        <item quantity="one">%s: %s kg in one location</item>
+        <item quantity="other">%s: %s kg in %d locations</item>
+    </plurals>
+    <plurals name="related_stock_item_lbs">
+        <item quantity="one">%s: %d lbs in one location</item>
+        <item quantity="other">%s: %d lbs in %d locations</item>
+    </plurals>
+    <string name="related_stock_item_none">%s: no stock</string>
 
     <!-- Exchange page -->
     <string name="exchange_title">Exchange</string>
