--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -223,6 +223,7 @@
     <string name="contracts_dialog_repeat_interval_two_week">Every two weeks</string>
     <string name="contracts_dialog_repeat_interval_month">Every month</string>
     <string name="contracts_dialog_repeat_interval_custom">Custom</string>
+    <string name="contracts_dialog_repeat_interval_custom_value_default">1</string>
 
     <string name="contracts_repeat_interval_display_one">Every %s</string>
     <string name="contracts_repeat_interval_display_multiple">Every %d %ss</string>
