--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -346,4 +346,21 @@
     <string name="btn_next">NEXT</string>
     <string name="btn_skip">SKIP</string>
     <string name="btn_done">DONE</string>
+
+    <string name="tutorial_theme_title">Choose theme</string>
+    <string name="tutorial_theme_light">Light</string>
+    <string name="tutorial_theme_dark">Dark</string>
+    <string name="tutorial_theme_auto">Use system default</string>
+
+    <string name="tutorial_meat_types_title">Add meat types</string>
+    <string name="tutorial_meat_types_suggested_title">Suggested:</string>
+    <string name="tutorial_meat_types_add_custom">Add a custom meat type</string>
+
+    <string name="tutorial_mass_unit_title">Choose mass unit</string>
+    <string name="tutorial_mass_unit_kgs">Kilograms\n(kg)</string>
+    <string name="tutorial_mass_unit_lbs">Pounds\n(lbs)</string>
+
+    <string name="tutorial_notifications_title">Enable notifications</string>
+    <string name="tutorial_notifications_on">ON</string>
+    <string name="tutorial_notifications_off">OFF</string>
 </resources>
